[package]
name = "s2yt"
version = "0.1.0"
edition = "2021"
authors = ["Raphiiko"]

[dependencies]
confy = "0.5.0"
rspotify = { version = "0.11.5", features = ["cli"] }
tokio = { version = "1.11.0", features = ["full"] }
serde = "1.0.145"
serde_json = "1.0.85"
open = "3.0.3"
actix-web = "4"
lazy_static = "1.4.0"
invidious = "0.3.2"
urlencoding = "2.1.2"
cli-clipboard = "0.2.1"